mision vison small size fix

--- a/src/components/Home/HomeMisionVision/HomeMisionVision.css
+++ b/src/components/Home/HomeMisionVision/HomeMisionVision.css
@@ -90,7 +90,7 @@
       }
       
       .text-mision, .text-vision{
-            font-size: 1.15rem;  
+            font-size: 1rem;  
       }
       
       .text-vision{                
